# backend/handler/middleware/jwt/middleware.go
@@ -1,7 +1,6 @@
 package jwt
 
 import (
-	"log"
 	"net/http"
 	"strings"
 	"wsai/backend/response"
@@ -14,29 +13,43 @@ func AuthMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		res := new(common.Response)
 
-		var token string
-		authHeader := c.GetHeader("Authorization")
-		if authHeader != "" && strings.HasPrefix(authHeader, "Bearer ") {
-			token = strings.TrimPrefix(authHeader, "Bearer ")
-		} else {
-			token = c.Query("token")
-		}
-
-		if token == "" {
-			c.JSON(http.StatusOK, res.CodeOf(code.CodeInvalidToken))
-			c.Abort()
-			return
-		}
-
-		log.Println("token:", token)
-		username, ok := ParseToken(token)
+		token, ok := bearerToken(c.GetHeader("Authorization"))
 		if !ok {
 			c.JSON(http.StatusOK, res.CodeOf(code.CodeInvalidToken))
 			c.Abort()
 			return
 		}
-		c.Set("username", username)
+
+		claims, err := ParseToken(token)
+		if err != nil {
+			c.JSON(http.StatusOK, res.CodeOf(code.CodeInvalidToken))
+			c.Abort()
+			return
+		}
+		blacklisted, err := IsTokenBlacklisted(c.Request.Context(), token)
+		if err != nil {
+			c.JSON(http.StatusOK, res.CodeOf(code.CodeServerBusy))
+			c.Abort()
+			return
+		}
+		if blacklisted {
+			c.JSON(http.StatusOK, res.CodeOf(code.CodeInvalidToken))
+			c.Abort()
+			return
+		}
+		c.Set("username", claims.Username)
+		c.Set("jwt_token", token)
+		c.Set("jwt_claims", claims)
 		c.Next()
 
 	}
+}
+
+func bearerToken(header string) (string, bool) {
+	parts := strings.Fields(header)
+	returnValue := ""
+	if len(parts) == 2 && strings.EqualFold(parts[0], "Bearer") && parts[1] != "" {
+		returnValue = parts[1]
+	}
+	return returnValue, returnValue != ""
 }
